2018-09-18         Arnold D. Robbins     <arnold@skeeve.com>

	* NEWS: Fix typo in gettext version.

2018-09-16  gettextize  <bug-gnu-gettext@gnu.org>

	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.19.8.
	* ABOUT-NLS, config.rpath: Updated by gettext 0.19.8.1.

2018-09-16         Arnold D. Robbins     <arnold@skeeve.com>

	* field.c (get_field): Add lint check if accessing $0 inside
	and END rule, print a "may not be portable" warning.
	* builtin.c (do_print_rec): Call get_field() unconditionally
	in order to do lint check.

	Unrelated:

	* awkgram.c, command.c: Updated to Bison 3.1.
	* NEWS: Updated.

	Unrelated:

	* Makefile.in, aclocal.m4, configure: Regenerated, using
	Automake 1.16.1.

	Unrelated:

	* gettext.h: Synced with that from Gettext 0.19.8.1.

2018-09-14         Adrian Bunk           <bunk@debian.org>

	* awk.h (init_debug, debug_prog): Move prototypes to here from ...
	* main.c: ... here.
	Thanks to Michael Tautschnig for noticing the type mismatch.

2018-09-07         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y, debug.c, ext.c, gawkapi.c, gawkapi.h,
	io.c: Remove unneeded \n in calls to warning(), fatal(),
	and lintwarn().
	* config.guess, config.sub: Updated from GNULIB.

2018-08-24         Arnold D. Robbins     <arnold@skeeve.com>

	* NEWS: Updated w.r.t. GNULIB regex routines.
	* config.sub: Updated from GNULIB.

2018-08-17         Arnold D. Robbins     <arnold@skeeve.com>

	* config.sub: Updated from GNULIB.

2018-08-10         Arnold D. Robbins     <arnold@skeeve.com>

	* config.guess, config.sub: Updated from GNULIB.

2018-08-05         John E. Malmberg      <wb8tyw@qsl.net>

	* custom.h: Define macros needed for building with gnu regex.

2018-08-02         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (yylex): Add lint warning upon encountering escaped
	physical newlines in a string.
	* node.c (make_str_node): Ditto.

2018-08-01         John E. Malmberg      <wb8tyw@qsl.net>

	* custom.h: Include fp.h on OpenVMS.