@@ -2,6 +2,13 @@
 
 	* NEWS: Fix typo in gettext version.
 
+	Unrelated:
+
+	* field.c (get_field): Move lint check for field access in an
+	END rule to top level, make wording more general.
+	* builtin.c (do_print_rec): Restore check before calling get_field()
+	and add do_lint to the condition.
+
 2018-09-16  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.19.8.
